UI: Align moon position to 52.5px above hand1 and fix playmat vertical alignment

--- a/raigo.css
+++ b/raigo.css
@@ -336,7 +336,7 @@
 .moon-rival {
   /* X: hand_rival_1 (105px shift), Y: inside_rival_1 (-50px) と同じ位置 */
   left: calc(231px + 100.5px + 85px + 35px + 140px + 100px - 105px);
-  top: calc(50% - 50px);
+  top: calc(50% - 52.5px);
   transform: translateY(-50%);
 }
 
@@ -349,7 +349,7 @@
 .moon-myself {
   /* X: hand_myself_1 (105px shift), Y: inside_myself_1 (-50px) と同じ位置 */
   left: calc(100% - 100.5px - 231px - 85px - 35px - 140px - 35px - 100px + 105px);
-  top: calc(50% - 50px);
+  top: calc(50% - 52.5px);
   transform: translateY(-50%);
 }
 
@@ -408,8 +408,8 @@
 
 .inside-rival-1,
 .inside-myself-1 {
-  /* 中央の50px上 */
-  top: calc(50% - 50px);
+  /* 中央の52.5px上 */
+  top: calc(50% - 52.5px);
   transform: translateY(-50%);
 }
 
@@ -467,7 +467,7 @@
 
 .deck-top {
   top: calc(50% - 140px);
-  left: calc(50% - 472.5px + 315px);
+  left: calc(50% - 472.5px);
 }
 
 .deck-bottom {
@@ -490,7 +490,7 @@
 .playmat-top {
   top: calc(50% - 150px - 140px);
   transform: none;
-  left: calc(50% - 472.5px + 315px);
+  left: calc(50% - 472.5px);
 }
 
 .playmat-bottom {
